--- a/Admin part/Appointments/appointments.css
+++ b/Admin part/Appointments/appointments.css
@@ -15,12 +15,12 @@ nav {
     flex:1;
 }
 
-img {
+/* img {
     height: auto;
     width: 90%;
     margin-top: 15%;
     background-color: #ffffff;
-}
+} */
 
 ul {
     list-style-type: none;
@@ -93,12 +93,12 @@ nav {
     
 }
 
-img {
+/* img {
     height: auto;
     width: 90%;
     margin-top: 15%;
     background-color: #ffffff;
-}
+} */
 
 ul {
     list-style-type: none;
@@ -117,8 +117,9 @@ a {
     font-size: 100%;
 }
 }
-img{
-    margin-top:0%;
+img {
+    width: 100%;
+    height: auto;
 }
   p {
     max-width: 40ch; /* am adaugat asta ca sa pot face descrierea sa se duca pe un rand*/
