--- a/Admin part/Login/login.css
+++ b/Admin part/Login/login.css
@@ -33,14 +33,14 @@ form {
     align-items: center;
 }
 
-#username, #password {
+#email, #password {
     height: 15%;
     width: 70%;
     text-align: center;
     font-size: 120%;
 }
 
-.login-link {
+.submit-button {
     background-color:rgb(10, 196, 10);
     color: rgb(255, 255, 255);
     text-align: center;
@@ -49,9 +49,10 @@ form {
     padding-left: 3px;
     padding-right: 3px;
     width: 20%;
+    font-size: 100%;
 }
 
-.recovery-wrapper {
+/* .recovery-wrapper {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -59,15 +60,21 @@ form {
 
 .lock {
     width: 10%;
-}
+} */
 
 @media screen and (max-width: 1024px)  {
-    main, .logo-image, #username, #password {
+    main, .logo-image, #email, #password {
         width: 90%;
     }
 
-    #username, #password {
+    #email, #password {
         text-align: center;
         font-size: 150%;
+    }
+
+    .submit-button {
+        width: 50%;
+        height: 15%;
+        font-size: 130%;
     }
 }
