--- a/Admin part/Orders/orders.css
+++ b/Admin part/Orders/orders.css
@@ -32,7 +32,7 @@ li input {
     display: none;
 }
 
-li label, a {
+li label, li button, a {
     text-decoration: none;
     display: block;
     line-height: 3;
@@ -43,7 +43,12 @@ li label, a {
     /* font-size: 1.3vw; */
 }
 
-li label:hover, a:hover {
+li button {
+    width: 100%;
+    border: 0;
+}
+
+li label:hover, li button:hover, a:hover {
     color: rgb(255, 255, 255);
     background-color: #fa3b14;
     cursor: pointer;
