--- a/Client part/Home/home.css
+++ b/Client part/Home/home.css
@@ -13,10 +13,10 @@ body {
 
 main {
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     display: flex;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../Images/home_photo.jpg");
 }
 
@@ -38,3 +38,7 @@ main {
         width: 
     }
 } */
+p{
+    font-size: 120%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
